@@ -1414,17 +1414,38 @@ print_thread_row (struct ui_out *uiout, thread_info *tp,
 			     uiout->is_mi_like_p (),
 			     LOCATION, 0);
 
-	  /* SIMD specific fields for MI.  */
-	  if (uiout->is_mi_like_p () && tp->has_simd_lanes ())
+	  /* Fields for MI which are only for stopped available threads.  */
+	  if (uiout->is_mi_like_p ())
 	    {
-	      unsigned int mask = tp->active_simd_lanes_mask ();
-	      uiout->field_fmt ("execution-mask", "0x%x", mask);
-	      unsigned int width = tp->get_simd_width ();
-	      uiout->field_fmt ("simd-width", "%u", width);
-	      bpstat *bp = tp->control.stop_bpstat;
-	      unsigned int hit_lane_mask;
-	      if (bp != nullptr && bp->find_hit_lane_mask (hit_lane_mask))
-		uiout->field_fmt ("hit-lanes-mask", "0x%x", hit_lane_mask);
+	      if (tp->has_simd_lanes ())
+		{
+		  unsigned int mask = tp->active_simd_lanes_mask ();
+		  uiout->field_fmt ("execution-mask", "0x%x", mask);
+		  unsigned int width = tp->get_simd_width ();
+		  uiout->field_fmt ("simd-width", "%u", width);
+		  bpstat *bp = tp->control.stop_bpstat;
+		  unsigned int hit_lane_mask;
+		  if (bp != nullptr && bp->find_hit_lane_mask (hit_lane_mask))
+		    uiout->field_fmt ("hit-lanes-mask", "0x%x",
+				      hit_lane_mask);
+		}
+	      if (gdbarch_thread_workgroup_p (tp->inf->gdbarch))
+		{
+		  try
+		    {
+		      /* An error is raised if the register read in
+			 `gdbarch_thread_workgroup` is not successful.  */
+		      std::array<uint32_t, 3> group
+			= gdbarch_thread_workgroup (tp->inf->gdbarch, tp);
+		      uiout->field_fmt ("thread-workgroup", "%u,%u,%u",
+					group[0], group[1], group[2]);
+		    }
+		  catch (const gdb_exception &)
+		    {
+		      /* Skip `thread-workgroup` field in case of errors.
+			 We don't want to abort the MI command.  */
+		    }
+		}
 	    }
 	}
     }
